fix RGL overflow issue

--- a/packages/react-components/style/output-components-style.css
+++ b/packages/react-components/style/output-components-style.css
@@ -296,3 +296,7 @@ canvas {
 .hoverClass:hover {
     border: 1px solid black;
 }
+
+.react-grid-item:hover {
+    z-index: 10;
+}
